manifests/overlays/stage/dependency-track/patch-dependency-track-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dependency-track
  namespace: dependency-track
spec:
  ingressClassName: traefik
  rules:
    - host: "dependency-track.staging.example.com"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dependency-track-api-server
                port:
                  name: web
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dependency-track-frontend
                port:
                  name: web
